chore: fix styling for mobile/dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,12 +17,6 @@
   }
 }
 
-@media screen and (max-width: 700px) {
-  :root {
-    font-size: 15px;
-  }
-}
-
 @media screen and (min-width: 1600px) {
   :root {
     font-size: 20px;
